# microservice-gowise

./: .gitignore  README.md  docker-compose.yml  prometheus.yml  test.http
.k8s/: admin-service--env-configmap.yaml  admin-service-deployment.yaml  admin-service-service.yaml  api-gateway--env-configmap.yaml  (+14 more)
chatbot-service/: main.py  pyproject.toml
chatbot-service/chatbot/: agent.py
demo/: pom.xml  (+1 more)
plan-service/: Dockerfile  bangkok_itinerary_2days.json  bangkok_itinerary_4days.json  london_itinerary_2days.json  london_itinerary_3days.json  paris_itinerary_4days.json  pyproject.toml  seoul_itinerary_2days.json  seoul_itinerary_3days.json  server.py  tokyo_itinerary_2days.json  tokyo_itinerary_3days.json
plan-service/agent/: __init__.py  agent.py
plan-service/data/: amsterdam.json  athens.json  bac_ninh.json  bangkok.json  barcelona.json  berlin.json  binh_thuan.json  budapest.json  busan.json  cebu_city.json  da_nang.json  dublin.json  florence.json  hanoi.json  ho_chi_minh.json  hung_yen.json  jeju.json  khanh_hoa.json  kurla_lumpur.json  kyoto.json  langkawi.json  las_vegas.json  legazpi_city.json  lisbon.json  london.json  los_angeles.json  makati.json  new_york.json  osaka.json  paris.json  penang.json  prague.json  quang_ninh.json  rome.json  seoul.json  singapore.json  stockholm.json  takayama.json  thua_thien_hue.json  tokyo.json  (+3 more)
plan-service/functions/: __init__.py  get_iata_code.py
plan-service/repository/: database.py
plan-service/service/: get_flight_ticket.py  get_hotel_info.py
plan-service/utils/: sort_flight_ticket.py  sort_hotel_booking.py
(+182 files in other folders)
